# trader-titan

./: .dev.vars.example  .gitignore  README.md  eslint.config.mjs  open-next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.worker.config.ts  worker-configuration.d.ts  wrangler.toml
.agents/: AGENTS.md
.agents/rules/: model_selection.md
.claude/agents/: apollo-grade-code.md  ares-security-audit.md  argus-anti-slop.md  asclepius-debugging.md  athena-code-review.md  atlas-deployment-readiness.md  chiron-fix-implementation.md  daedalus-feature-implementation.md  hephaestus-tech-debt.md  hermes-performance-profile.md  iris-integration-test.md  metis-configuration-audit.md  (+4 more)
.codex/: config.toml
app/: globals.css  page.tsx
config/: gemini-markets.json  static-markets.json
e2e/: game-flow.spec.ts  visual-audit.spec.ts
olympus/: AGENTS.md  README.md  __init__.py  cli.py  client.py  core.py  effects.py  jsonio.py  models.py  orchestrator.py  paths.py  pyproject.toml  registry.py
olympus/tests/: factories.py  test_cli.py  test_client.py  test_core.py  test_effects.py  test_integration_live.py  test_jsonio.py  test_models.py  test_orchestrator.py  test_paths.py  test_registry.py
prompts/: code-review.md  feature-implementation.md  fix-implementation.md  orchestrator.md  planning.md  refactoring.md  tech-debt.md
scripts/: assert-durable-room-ready.mjs  build-cloudflare.mjs
specs/: cloudflare-worker.md  item-generation-api.md  item-generation.md  room-domain.md  room-protocol.md
src/: test-setup.ts
(+149 files in other folders)
