[project]
name = "olympus"
version = "0.1.0"
description = "A pure-functional agent orchestration loop over the Persephone pantheon."
requires-python = ">=3.11"
dependencies = ["pydantic>=2.6", "claude-agent-sdk>=0.2"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
